--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8" />
@@ -55,6 +55,7 @@ img {
 
 .imgActionBtns {
 	padding: 10px;
+	display: none;
 }
 </style>
 
@@ -120,7 +121,7 @@ img {
 						<div class="card-body">
 							<form>
 
-								<!-- --------------------------------------------------------- -->
+								---------------------------------------------------------
 
 								<div id="container" class="form-group">
 									<label class="form-label">Do you want to draw or upload
@@ -136,7 +137,7 @@ img {
 										class="form-control" placeholder="E-Signature Name">
 								</div>
 
-								<!--   ------------------------------------------------------------------ -->
+								  ------------------------------------------------------------------
 								<div id="drawContainer" class="container" style="display: none;">
 									<div>
 										<div id="signpad-ajax-msg" class="alert alert-dismissible"
@@ -161,7 +162,7 @@ img {
 										</div>
 									</div>
 								</div>
-								<!-- ----------------------------------------------------------- -->
+								-----------------------------------------------------------
 
 								<div id="uploadContainer" class="container"
 									style="display: none;">
@@ -199,12 +200,12 @@ img {
 										</div>
 									</div>
 								</div>
-								<!-- -------------------------------------------------------------- -->
+								--------------------------------------------------------------
 								<br> <br>
 								<br>
 
 								
-								<!-- <button type="submit" class="btn btn-primary">Submit</button> -->
+								<button type="submit" class="btn btn-primary">Submit</button>
 							</form>
 						</div>
 					</div>
@@ -212,8 +213,8 @@ img {
 			</main>
 		</div>
 	</div>
-	<!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-		crossorigin="anonymous"></script> -->
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+		crossorigin="anonymous"></script>
 	<script
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
 		crossorigin="anonymous"></script>
@@ -258,6 +259,8 @@ img {
 		
 		var uploadBtn = document.getElementById('upload');
 		var myCanvas = document.getElementById("testCanvas");
+		
+
 		// on click of Upload Button
 		uploadBtn.addEventListener('click', function(event) {
 			event.preventDefault();
@@ -339,6 +342,6 @@ img {
 		</script>
 
 
-	<!-- ----------------------------------------------------------------------------------------------------------------------------------------------- -->
+	-----------------------------------------------------------------------------------------------------------------------------------------------
 </body>
-</html>
+</html> -->
