--- a/src/main/resources/templates/calpersindex.html
+++ b/src/main/resources/templates/calpersindex.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8" />
@@ -80,4 +80,4 @@
 		th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
 
 </body>
-</html>
+</html> -->
