--- a/src/main/resources/templates/calperslogin.html
+++ b/src/main/resources/templates/calperslogin.html
@@ -25,6 +25,7 @@
 			<div class="logo-row">
 				<a th:href="@{/}"> <img style="height: 110px;"
 					src="/dist/img/calpers_logo.png" alt="logo" class="col-12">
+
 				</a>
 			</div>
 		</div>
@@ -35,6 +36,8 @@
 		<div class="right">
 			<div class="form-container">
 				<img src="dist/img/login-small.png" class="bg">
+				<h3 class="text-center font-weight-bold">E-signature management
+					application</h3>
 				<h3 class="text-center font-weight-bold">Sign in</h3>
 
 				<form th:action="@{/login}" method="post">
@@ -47,59 +50,65 @@
 					</div>
 
 					<div class="form-group">
-						<label for="username">Username</label>: <input type="text"
+						<label for="username">Email</label>: <input type="text"
 							id="username" name="username" class="form-control"
-							autofocus="autofocus" placeholder="Username" />
+							autofocus="autofocus" placeholder="Enter email" />
 					</div>
 
 					<div class="form-group">
 						<label for="password">Password</label>: <input type="password"
 							id="password" name="password" class="form-control"
-							placeholder="Password" />
+							placeholder="Enter password" />
 					</div>
 
 					<input type="submit" name="login-submit" id="login-submit"
 						class="btn btn-primary btn-md btn-block" value="Log In" />
-						<div id="loginlinks" >
-						<a href="#" data-target="#pwdModal" data-toggle="modal">I forgot my password</a> 
-						<a class="register" th:href="@{/registration}">Not a member yet?</a>
-						</div>
+					<div id="loginlinks">
+						<a href="#" data-target="#pwdModal" data-toggle="modal">I
+							forgot my password</a> <a class="register" th:href="@{/registration}">Not
+							a member yet?</a>
+					</div>
 				</form>
-				
-				<div id="pwdModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-dialog">
-  <div class="modal-content">
-      <div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-		<h3 class="text-center">Password Reset</h3> 
-	  </div>
-      <div class="modal-body">
-          <div class="col-md-12">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        <div class="text-center">
-                          <h4>Please provide your registered email address</h4>
-                            <div class="panel-body">
-                                <fieldset>
-                                    <div class="form-group">
-                                        <input class="form-control input-lg" placeholder="E-mail Address" name="email" type="email">
-                                    </div>
-                                    <input class="btn btn-md btn-primary btn-block" value="Send" type="submit">
-                                </fieldset>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-      </div>
-      <div class="modal-footer">
-          <div class="col-md-12">
-          <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
-		  </div>	
-      </div>
-  </div>
-  </div>
-</div>
+
+				<div id="pwdModal" class="modal fade" tabindex="-1" role="dialog"
+					aria-hidden="true">
+					<div class="modal-dialog">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal"
+									aria-hidden="true">×</button>
+								<h3 class="text-center">Password Reset</h3>
+							</div>
+							<div class="modal-body">
+								<div class="col-md-12">
+									<div class="panel panel-default">
+										<div class="panel-body">
+											<div class="text-center">
+												<h4>Please provide your registered email address</h4>
+												<div class="panel-body">
+													<fieldset>
+														<div class="form-group">
+															<input class="form-control input-lg"
+																placeholder="E-mail Address" name="email" type="email">
+														</div>
+														<input class="btn btn-md btn-primary btn-block"
+															value="Send" type="submit">
+														(On clicking send display this:)You will receive an email if already registered.	
+													</fieldset>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="modal-footer">
+								<div class="col-md-12">
+									<button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 
 
 			</div>
