--- a/src/main/resources/templates/calperslogin.html
+++ b/src/main/resources/templates/calperslogin.html
@@ -36,13 +36,12 @@
 		<div class="right">
 			<div class="form-container">
 				<img src="dist/img/login-small.png" class="bg">
-				<h3 class="text-center font-weight-bold">E-signature management
-					application</h3>
+				<h4 class="text-center font-weight-bold">eSignature Management Portal</h4>
 				<h3 class="text-center font-weight-bold">Sign in</h3>
 
 				<form th:action="@{/login}" method="post">
 					<div th:if="${param.error}">
-						<div class="alert alert-danger">Invalid username or
+						<div class="alert alert-danger">Invalid email or
 							password.</div>
 					</div>
 					<div th:if="${param.logout}">
