--- a/src/main/resources/templates/calpers_Viewprofile.html
+++ b/src/main/resources/templates/calpers_Viewprofile.html
@@ -56,8 +56,9 @@ img {
 }
 
 label {
-	font-weight: normal;
+font-weight: normal;
 }
+
 </style>
 
 <title>View Profile</title>
@@ -122,14 +123,6 @@ label {
 					</div>
 					<div class="card-body">
 						<!-- -------------------------------------------------------------- -->
-						<div th:if="${param.success}">
-							<div class="alert alert-success">Successfully saved profile
-								details.</div>
-						</div>
-						<div th:if="${param.error}">
-							<div class="alert alert-danger">Failed to update profile
-								details.</div>
-						</div>
 
 						<div class="col-md-8 col-md-offset-2">
 							<form class="form-horizontal" role="form">
@@ -137,35 +130,35 @@ label {
 									<label class="col-md-4">First name:</label>
 									<div class="col-md-8">
 										<input class="form-control" type="text"
-											th:value="${session.userDetails.firstName}" disabled>
+											th:value="${session.User.firstName}" disabled>
 									</div>
 								</div>
 								<div class="form-group editFields">
 									<label class="col-md-4">Last name:</label>
 									<div class="col-md-8">
 										<input class="form-control" type="text"
-											th:value="${session.userDetails.lastName}" disabled>
+											th:value="${session.User.lastName}" disabled>
 									</div>
 								</div>
 								<div class="form-group editFields">
 									<label class="col-md-4">Organization:</label>
 									<div class="col-md-8">
 										<input class="form-control" type="text"
-											th:value="${session.userDetails.organization}" disabled>
+											th:value="${session.User.organization}" disabled>
 									</div>
 								</div>
 								<div class="form-group editFields">
 									<label class="col-md-4">Email:</label>
 									<div class="col-md-8">
 										<input class="form-control" type="text"
-											th:value="${session.userDetails.email}" disabled>
+											th:value="${session.User.email}" disabled>
 									</div>
 								</div>
 								<div class="form-group editFields">
 									<label class="col-md-4">Contact No:</label>
 									<div class="col-md-8">
 										<input class="form-control" type="text"
-											th:value="${session.userDetails.contactNo}" disabled>
+											th:value="${session.User.contactNo}" disabled>
 									</div>
 								</div>
 							</form>
@@ -183,13 +176,55 @@ label {
 	<script
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
 		crossorigin="anonymous"></script>
-
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
+		crossorigin="anonymous"></script>
+	<script src="/js/scripts.js"></script>
 	<script
 		src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script
 		src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-
-	<!-- ----------------------------------------------------------------------------------------------------------------------------------------------- -->
+	<script
+		src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js"></script>
+	<script type="text/javascript">
+		(function(){
+	      var tabs = document.getElementById('tabs');
+	      var nav = tabs.getElementsByTagName('input');
+	
+	      /*
+	      * Hide all tabs
+	      */
+	      function hideTabs(){
+	        var tab = tabs.getElementsByTagName('div');
+	        for(var i=0;i<=nav.length;i++){
+	          if(tab[i].className == 'tab'){
+	            tab[i].className = tab[i].className + ' hide';
+	          }
+	        }
+	      }
+		  
+		  function showTab(tab){
+	        document.getElementById(tab).className = 'tab'
+	      }
+	
+	      hideTabs(); /* hide tabs on load */
+	
+	      /*
+	      * Add click events
+	      */
+	      for(var i=0;i<nav.length;i++){
+	        nav[i].onclick = function(){
+	          hideTabs();
+	          showTab(this.className);
+	        }
+	      }
+		})();
+		
+            
+     <!-- ----------------------------------------------------------------------------------------------------------------------------------------------- -->       
 </body>
-</html>
-
+</html>   
+                         
+		
