--- a/src/main/resources/templates/signature_v2.html
+++ b/src/main/resources/templates/signature_v2.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8" />
@@ -233,4 +233,4 @@ img {
 		});
 	</script>
 </body>
-</html> -->
+</html>
