--- a/src/main/resources/templates/dash_v2.html
+++ b/src/main/resources/templates/dash_v2.html
@@ -59,9 +59,8 @@ img {
 }
 
 label {
-font-weight: normal;
+	font-weight: normal;
 }
-
 </style>
 
 <title>Signature Capture</title>
@@ -94,7 +93,7 @@ font-weight: normal;
 								<i class="fas fa-user"></i>
 							</div> <span class="sidebar" style="color: white; padding-left: 5px;">View/Edit
 								Profile</span>
-						</a> <a class="nav-link" href="#">
+						</a> <a class="nav-link" href="/changepwd">
 							<div class="sb-nav-link-icon" style="color: white">
 								<i class="glyphicon glyphicon-lock"></i>
 							</div> <span class="sidebar" style="color: white; padding-left: 4px;">Change
@@ -119,10 +118,21 @@ font-weight: normal;
 				<div class="container-fluid">
 					<div class="card">
 						<div class="card-header">
-							<div class="row" style="margin-bottom: -12px;">
-							    <div class="col-md-4"><h5>Home</h5></div>
-								<div class="col-md-4" style="text-align:center;"><h5> Welcome <span th:text="${session.User.firstName}"></span></h5> </div>
-								<div class="col-md-4"><p style="float:right;">User Type: <span th:text="${session.User.userType}==2 ? 'External' : 'Internal'"></span></p></div>
+							<div class="row" style="margin-bottom:-12px;">
+								<div class="col-sm-4">
+									<h5>Home</h5>
+								</div>
+								<div class="col-sm-4" style="text-align: center;">
+									<h5>
+										Welcome <span th:text="${session.userDetails.firstName}"></span>
+									</h5>
+								</div>
+								<div class="col-sm-4">
+									<p style="float: right;">
+										User Type: <span
+											th:text="${session.userDetails.userType}==2 ? 'External' : 'Internal'"></span>
+									</p>
+								</div>
 							</div>
 
 						</div>
@@ -131,21 +141,21 @@ font-weight: normal;
 
 								<!-- --------------------------------------------------------- -->
 
-								<div class="row">
-									<label class="col-md-5">Do you want to upload or draw signature ?</label>
-									<div class="col-md-7">
+                                <div class="row"
+									style="padding-bottom: 16px;">
+									<label class="col-md-6">Please enter preferred name
+										with signature:</label> <input type="text" id="preferredNameId"
+										class="form-control col-md-5" placeholder="E-Signature Name">
+								</div>
+								<div class="row" style="padding-bottom: 16px;">
+									<label class="col-md-6">Would you like to draw or upload your signature?</label>
+									<div class="col-md-5">
 										<input type="radio" id="uploadOpt" name="signOption"
-											value="upload"><label for="email">Upload</label> <input
-											type="radio" id="drawOpt" name="signOption" value="draw">
-										<label for="phone">Draw</label>
+											value="draw"><label for="email">Draw</label> <input
+											type="radio" id="drawOpt" name="signOption" value="upload">
+										<label for="phone">Upload</label>
 									</div>
 								</div>
-								<div class="row" style="padding-top: 16px; padding-bottom: 16px;">
-									<label class="col-md-5">Please enter preferred name with signature:</label> <input
-										type="text" id="preferredNameId" class="form-control col-md-7"
-										placeholder="E-Signature Name">
-								</div>
-
 								<!--   ------------------------------------------------------------------ -->
 								<div id="drawContainer" class="container" style="display: none;">
 									<div>
@@ -192,10 +202,10 @@ font-weight: normal;
 												<br />
 												<div id="fileSelectDiv">
 
-													<input type="file" id="signatureFile"
-														onchange="handleFileSelect()" />
+													<input type="file" id="signatureFile" onclick="click()"
+														onchange="handleFileSelect()"/>
 												</div>
-												<div class="imgActionBtns">
+												<div class="imgActionBtns" id="buttons" >
 													<input type="button" onclick="cropper.startCropping()"
 														value="Start cropping" /> <input type="button"
 														onclick="cropper.getCroppedImageSrc()" value="Crop" /> <input
@@ -232,8 +242,13 @@ font-weight: normal;
 		src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js"></script>
 	<script type="text/javascript" src="/js/cropper.js"></script>
 	<script>
+	$(document).ready(function() {
+	    $('#signatureFile').click(function() {
+	        $('#imgActionBtns').show();
+	    });
+	});	
 		
-		$(document).ready(function() {
+	$(document).ready(function() {
 			  $('input[type=radio][name="signOption"]').on('change', function() {
 				  if(this.value=="upload") {
 					  $('#uploadContainer').show();
@@ -251,6 +266,7 @@ font-weight: normal;
 			// this function will be called when the file input below is changed
 			var file = document.getElementById("signatureFile").files[0];  // get a reference to the selected file
 			
+			
 			var reader = new FileReader(); 
 			reader.onload = function(event) {
 				var data = event.target.result; // the "data url" of the image
@@ -264,8 +280,11 @@ font-weight: normal;
 		
 		var uploadBtn = document.getElementById('upload');
 		var myCanvas = document.getElementById("testCanvas");
+		
+		
 		// on click of Upload Button
 		uploadBtn.addEventListener('click', function(event) {
+			
 			event.preventDefault();
 			var dataURI = myCanvas.toDataURL();
 			var preferredNameUpload = $('#preferredNameId').val(); 
