--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -47,20 +46,13 @@ img {
 	border-style: solid;
 }
 
-.editFields {
-	padding-bottom: 3px;
-}
-
-.form-group {
-	margin-bottom: 1rem;
-}
-
 label {
-	font-weight: normal;
+font-weight: normal;
 }
+
 </style>
 
-<title>View Profile</title>
+<title>Error Page</title>
 </head>
 
 <body class="sb-nav-fixed">
@@ -84,7 +76,7 @@ label {
 							<div class="sb-nav-link-icon" style="color: white">
 								<i class="fas fa-home"></i>
 							</div> <span style="color: white">Home</span>
-						</a> <a class="nav-link" href="#">
+						</a> <a class="nav-link" href="/viewprofile">
 							<div class="sb-nav-link-icon" style="color: white">
 								<i class="fas fa-user"></i>
 							</div> <span style="color: white">View/Edit Profile</span>
@@ -107,89 +99,73 @@ label {
 		</div>
 		<div id="layoutSidenav_content">
 			<div class="container-fluid">
-				<h4>View/Edit Profile</h4>
-
+				<h4></h4>
 				<div class="card">
 					<div class="card-header">
 						<div class="row">
-							<h5 class="card-title col-sm-10">View Profile</h5>
-							<div style="float: right;" class="col-sm-2">
-								<a href="/editprofile" class="btn btn-info btn-sm"> <span
-									class="glyphicon glyphicon-wrench"></span> Edit Profile
-								</a>
-							</div>
+							<h5 class="card-title">Error Page</h5>
 						</div>
 					</div>
 					<div class="card-body">
-						<!-- -------------------------------------------------------------- -->
-						<div th:if="${param.success}">
-							<div class="alert alert-success">Successfully saved profile
-								details.</div>
-						</div>
-						<div th:if="${param.error}">
-							<div class="alert alert-danger">Failed to update profile
-								details.</div>
-						</div>
 
-						<div class="col-md-8 col-md-offset-2">
-							<form class="form-horizontal" role="form">
-								<div class="form-group editFields">
-									<label class="col-md-4">First name:</label>
-									<div class="col-md-8">
-										<input class="form-control" type="text"
-											th:value="${session.userDetails.firstName}" disabled>
-									</div>
-								</div>
-								<div class="form-group editFields">
-									<label class="col-md-4">Last name:</label>
-									<div class="col-md-8">
-										<input class="form-control" type="text"
-											th:value="${session.userDetails.lastName}" disabled>
-									</div>
-								</div>
-								<div class="form-group editFields">
-									<label class="col-md-4">Organization:</label>
-									<div class="col-md-8">
-										<input class="form-control" type="text"
-											th:value="${session.userDetails.organization}" disabled>
-									</div>
-								</div>
-								<div class="form-group editFields">
-									<label class="col-md-4">Email:</label>
-									<div class="col-md-8">
-										<input class="form-control" type="text"
-											th:value="${session.userDetails.email}" disabled>
-									</div>
-								</div>
-								<div class="form-group editFields">
-									<label class="col-md-4">Contact No:</label>
-									<div class="col-md-8">
-										<input class="form-control" type="text"
-											th:value="${session.userDetails.contactNo}" disabled>
-									</div>
-								</div>
-							</form>
-						</div>
+						<h4 style="text-align: center;">Opps!! Something went wrong. Please login again...</h4>
 					</div>
 				</div>
+
 			</div>
 		</div>
 	</div>
 	<hr>
-
 
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
 		crossorigin="anonymous"></script>
 	<script
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
 		crossorigin="anonymous"></script>
-
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
+		crossorigin="anonymous"></script>
+	<script src="/js/scripts.js"></script>
 	<script
 		src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script
 		src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 
-	<!-- ----------------------------------------------------------------------------------------------------------------------------------------------- -->
+	<script type="text/javascript">
+		(function() {
+			var tabs = document.getElementById('tabs');
+			var nav = tabs.getElementsByTagName('input');
+
+			/*
+			 * Hide all tabs
+			 */
+			function hideTabs() {
+				var tab = tabs.getElementsByTagName('div');
+				for (var i = 0; i <= nav.length; i++) {
+					if (tab[i].className == 'tab') {
+						tab[i].className = tab[i].className + ' hide';
+					}
+				}
+			}
+
+			function showTab(tab) {
+				document.getElementById(tab).className = 'tab'
+			}
+
+			hideTabs(); /* hide tabs on load */
+
+			/*
+			 * Add click events
+			 */
+			for (var i = 0; i < nav.length; i++) {
+				nav[i].onclick = function() {
+					hideTabs();
+					showTab(this.className);
+				}
+			}
+		})();
+</script>
 </body>
 </html>
-
