--- a/src/main/resources/templates/dash_v2.html
+++ b/src/main/resources/templates/dash_v2.html
@@ -93,7 +93,7 @@ label {
 								<i class="fas fa-user"></i>
 							</div> <span class="sidebar" style="color: white; padding-left: 5px;">View/Edit
 								Profile</span>
-						</a> <a class="nav-link" href="#">
+						</a> <a class="nav-link" href="/changepwd">
 							<div class="sb-nav-link-icon" style="color: white">
 								<i class="glyphicon glyphicon-lock"></i>
 							</div> <span class="sidebar" style="color: white; padding-left: 4px;">Change
@@ -161,7 +161,7 @@ label {
 								<div>
 									<div id="signpad-ajax-msg" class="alert alert-dismissible"
 										style="display: none;">
-										<input type="button" class="close" data-dismiss="alert"
+										<input type="button" class="close btn btn-sm" data-dismiss="alert"
 											aria-hidden="true" value="x">
 										<p></p>
 									</div>
@@ -175,9 +175,9 @@ label {
 										</div>
 										<p class="imgActionBtns">
 
-											<input type="button" class="btn btn-primary" id="save"
+											<input type="button" class="btn btn-md btn-primary" id="save"
 												value="Save"> <input type="button"
-												class="btn btn-primary" id="clear" value="Clear">
+												class="btn btn-md btn-primary" id="clear" value="Clear">
 										</p>
 									</div>
 								</div>
@@ -189,7 +189,7 @@ label {
 								<div>
 									<div id="upload-ajax-msg" class="alert alert-dismissible"
 										style="display: none;">
-										<input type="button" class="close" data-dismiss="alert"
+										<input type="button" class="close btn btn-sm" data-dismiss="alert"
 											aria-hidden="true" value="x">
 										<p></p>
 									</div>
