ESM:32 Reset Password Changes
For reset password link on login page

--- a/src/main/resources/templates/calpers_Viewprofile.html
+++ b/src/main/resources/templates/calpers_Viewprofile.html
@@ -88,7 +88,7 @@ label {
 							<div class="sb-nav-link-icon" style="color: white">
 								<i class="fas fa-user"></i>
 							</div> <span style="color: white">View/Edit Profile</span>
-						</a> <a class="nav-link" href="#">
+						</a> <a class="nav-link" href="/changepwd">
 							<div class="sb-nav-link-icon" style="color: white">
 								<i class="glyphicon glyphicon-lock"></i>
 							</div> <span style="color: white">Change password</span>
