--- a/src/main/resources/templates/calpers_editprofile.html
+++ b/src/main/resources/templates/calpers_editprofile.html
@@ -79,7 +79,7 @@ label {
 							<div class="sb-nav-link-icon" style="color: white">
 								<i class="fas fa-user"></i>
 							</div> <span style="color: white">View/Edit Profile</span>
-						</a> <a class="nav-link" href="#">
+						</a> <a class="nav-link" href="/changepwd">
 							<div class="sb-nav-link-icon" style="color: white">
 								<i class="glyphicon glyphicon-lock"></i>
 							</div> <span style="color: white">Change password</span>
@@ -170,7 +170,6 @@ label {
 	<script
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
 		crossorigin="anonymous"></script>
-	<
 	<script
 		src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script
