--- a/src/main/resources/templates/calperslogin.html
+++ b/src/main/resources/templates/calperslogin.html
@@ -36,13 +36,17 @@
 		<div class="right">
 			<div class="form-container">
 				<img src="dist/img/login-small.png" class="bg">
-				<h4 class="text-center font-weight-bold">eSignature Management Portal</h4>
+				<h4 class="text-center font-weight-bold">eSignature Management
+					Portal</h4>
 				<h3 class="text-center font-weight-bold">Sign in</h3>
 
 				<form th:action="@{/login}" method="post">
 					<div th:if="${param.error}">
-						<div class="alert alert-danger">Invalid email or
-							password.</div>
+						<div class="alert alert-danger">Invalid email or password.</div>
+					</div>
+					<div th:if="${param.success}">
+						<div class="alert alert-success">Password reset was
+							successful. Please login again with new password.</div>
 					</div>
 					<div th:if="${param.logout}">
 						<div class="alert alert-info">You have been logged out.</div>
@@ -63,9 +67,9 @@
 					<input type="submit" name="login-submit" id="login-submit"
 						class="btn btn-primary btn-md btn-block" value="Log In" />
 					<div id="loginlinks">
-						<a href="#" data-target="#pwdModal" data-toggle="modal">I
-							forgot my password</a> <a class="register" th:href="@{/registration}">Not
-							a member yet?</a>
+						<a href="#" data-target="#pwdModal" data-toggle="modal">
+							Forgot password?</a> <a class="register" th:href="@{/registration}">Not
+							a member yet? Sign Up</a>
 					</div>
 				</form>
 
@@ -85,14 +89,21 @@
 											<div class="text-center">
 												<h4>Please provide your registered email address</h4>
 												<div class="panel-body">
+													<div id="ajax-msg" class="alert alert-dismissible"
+														style="display: none;">
+														<input type="button" class="close btn btn-sm"
+															data-dismiss="alert" aria-hidden="true" value="x">
+														<p style="text-align:center;"></p>
+													</div>
 													<fieldset>
 														<div class="form-group">
 															<input class="form-control input-lg"
-																placeholder="E-mail Address" name="email" type="email">
+																placeholder="E-mail Address" id="email" name="email"
+																type="email">
 														</div>
-														<input class="btn btn-md btn-primary btn-block"
-															value="Send" type="submit">
-														(On clicking send display this:)You will receive an email if already registered.	
+														<input id="sendBtn"
+															class="btn btn-md btn-primary btn-block" value="Send"
+															type="button">
 													</fieldset>
 												</div>
 											</div>
@@ -113,11 +124,52 @@
 			</div>
 		</div>
 	</div>
-	</div>
-	<script type="text/javascript"
-		th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+		crossorigin="anonymous"></script>
 	<script type="text/javascript"
 		th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
+	<script type="text/javascript">
+	$("#sendBtn").click(function(e) {
+            e.preventDefault();
+            var emailId = $("#email").val();
+            var data = {
+                email: emailId
+            };
+            var delay = 2000;
+            $.ajax({
+                    type: "POST",
+                    data: JSON.stringify(data),
+                    contentType: "application/json",
+                    url: "resetpwd",
+                    cache: false,
+                    success: function(data) {
+                        if (data == "Success") {
+                            console.log("success block");
+                            $('#ajax-msg').addClass(
+                                'alert-success');
+                            $('#ajax-msg')
+                                .find("p")
+                                .html(
+                                    "Password reset link sent to your email id. If you are registered with us you will be receiving an email shortly");
+                            $('#ajax-msg').show();
+                            setTimeout(function(){
+                            	  window.location.href = "/login";
+                            	 },delay);
+                        }
+                    },
+                    error: function(data) {
+                        console.log("error block");
+                        $('#ajax-msg').addClass(
+                            'alert-danger');
+                        $('#ajax-msg')
+                            .find("p")
+                            .html(
+                                "Failed to reset password.");
+                        $('#ajax-msg').show();
+                    }
+                });
+        });
+	</script>
 </body>
 </html>
 
